@@ -467,6 +467,9 @@ Other Changes
 
 32. Upgraded to Lucene 2.9-dev r776177 (shalin)
 
+33. SOLR-1149: Made QParserPlugin and related classes extendible as an experimental API.
+    (Kaktu Chakarabati via shalin)
+
 Build
 ----------------------
  1. SOLR-776: Added in ability to sign artifacts via Ant for releases (gsingers)
